Add Paper 1.18 target support